Text file upload from Frontend to backend and data fetch from backend to frontend code integrated.

--- a/frontend/src/components/styles/textHome.css
+++ b/frontend/src/components/styles/textHome.css
@@ -13,6 +13,7 @@
     width: 100%;
     height: 18rem;
     border: none;
+    background-color: white;
 }
 .textare-input-Analyser button{
     padding: 0.5% 2%;
